--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "dev": "vite",
+    "dev": "vercel dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "node --env-file=.env.local scripts/seed-kv.mjs"
   },
   "dependencies": {
+    "@vercel/blob": "^0.23.4",
+    "@vercel/kv": "^2.0.0",
     "nodemailer": "^6.9.14",
     "phosphor-react": "^1.4.1",
     "react": "^19.2.0",
@@ -18,7 +21,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "dotenv": "^16.4.5",
     "typescript": "^5.4.5",
+    "vercel": "^35.2.1",
     "vite": "^5.3.1"
   }
 }
