Admin login fix

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,13 @@
-{}
+{
+  "functions": {
+    "api/**/*.js": {
+      "maxDuration": 10
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/:path((?!api/|.*\\.).*)",
+      "destination": "/index.html"
+    }
+  ]
+}
