--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "dev": "vite",
     "dev:vercel": "vercel dev",
     "build": "vite build",
-    "preview": "vite preview",
-    "seed": "node --env-file=.env.local scripts/seed-kv.mjs"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/backend": "^1.2.3",
+    "@clerk/clerk-react": "^5.2.7",
     "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
-    "cookie": "^0.6.0",
-    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "phosphor-react": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
