--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   },
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    },
+    {
       "source": "/:path((?!api/|.*\\.).*)",
       "destination": "/index.html"
     }
