--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
     "bcryptjs": "^2.4.3",
